syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "PixKeyManagerGrpc";
option objc_class_prefix = "HLW";

package br.com.zup;

service PixService {
  rpc novaChavePix (NovaPixKeyRequest) returns (NovaPixKeyResponse) {}
  rpc deletaChavePix (DeletaKeyRequest) returns (DeletaKeyResponse) {}
}

enum  TipoChave{
  INVALIDA = 0;
  CPF = 1;
  TELEFONE = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoConta{
  INDEFINIDO = 0;
  CORRENTE = 1;
  Poupanca = 2;
}

message NovaPixKeyRequest {
  string idCliente = 1;
  TipoChave tipoChave = 2;
  string key = 3;
  TipoConta tipoConta = 4;
}

message NovaPixKeyResponse {
  int64 pixId = 1;
}

message DeletaKeyRequest{
  int64 pixId = 1;
  string idCliente = 2;
}

message DeletaKeyResponse{
  string mensagem = 1;
}